# ai-automation-for-non-coders

./: .gitignore  CLAUDE.md  META_CONVERSIONS_API_SETUP.md  STRIPE_SETUP.md  citizen-developer.csv  commands.sh  coures-content.txt  debug-meta-registration.py  debug-meta-timing.py  deploy.sh  html_to_pdf.py  index.html  perlin-background.js  pyproject.toml  register.html  scripts.js  styles.css  test-backend-meta-events.py  test-contact-event.py  test-meta-api.py  test.sh  test_contact_fix.html  todo
assets/: terraform-outputs.json
components/: footer.html  header.html
course-design/: automation-course-onepager.html  caanz.txt  me.html
frontend-tf/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
lambda/: application-approval.py  application_handler.py  build_lambda_package.sh  contact-handler.py  email_templates.py  livestream-handler.py  meta_conversions_api.py  payment-webhook.py  preview_email.py  referral-handler.py  registration-handler.py  requirements.txt  send-user-email.py  test_email_render.py  test_meta_conversions.py  test_registration_handler.py  test_registration_types.py  view_content_handler.py
marketing/: gemini_image_examples.py  generate.py  generate_gpt.py  generate_imagen.py  main.py
src/: apply.html  blog-post-voice-llm.html  blog.html  book-meeting.html  chart.js  config.js  contact.html  index.html  livestream.html  meta-pixel.js  meta-tracking.js  performance-test.js  perlin-background.js  referral-tracking.js  register.html  scripts.js  styles.css  terraform-outputs.json  (+1 more)
tf/: iam.tf  (+11 more)
(+20 files in other folders)
