[project]
name = "course"
version = "0.1.0"
description = ""
authors = [
    {name = "Louka Ewington-Pitsos",email = "lewingtonpitsos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "boto3 (>=1.40.21,<2.0.0)",
    "google-genai (>=1.32.0,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
